--- a/_dist/_styleguide/index.html
+++ b/_dist/_styleguide/index.html
@@ -32,11 +32,11 @@
         <script>
             var fileExt = ".html";
             $.ajax({
-              url: "_patterns/atoms/button",
+              url: "_patterns/atoms/",
               success: function(data){
-                 $(data)/*.find("a:contains(" + fileExt + ")")*/.each(function(){
+                 $(data).find("a:contains(" + fileExt + ")").each(function(){
                     $this = $(this);
-                    console.log($this);
+                    //console.log($this);
                     // will loop through
                     var pattern = $this.load('body');
 
