--- a/_dist/_styleguide/_patterns/atoms/button/index.html
+++ b/_dist/_styleguide/_patterns/atoms/button/index.html
@@ -40,7 +40,7 @@
 		</style>
 
 
-  	<link rel="stylesheet" href="./assets/css/app.css">
+  	<link rel="stylesheet" href="../../../../assets/css/app.css">
 
 		<!-- If IE8 should be supported, anyway -->
 		<!--[if lt IE 9]>
@@ -49,9 +49,9 @@
 	</head>
 	<body>
 
-	<button class="btn">lorem</button>
+
+  <button class="btn">lorem</button>
 
 
 	</body>
 </html>
-
