--- a/_dist/_styleguide/_patterns/index.html
+++ b/_dist/_styleguide/_patterns/index.html
@@ -40,7 +40,7 @@
 		</style>
 
 
-  	<link rel="stylesheet" href="./assets/css/app.css">
+  	<link rel="stylesheet" href="../../../../assets/css/app.css">
 
 		<!-- If IE8 should be supported, anyway -->
 		<!--[if lt IE 9]>
@@ -49,7 +49,8 @@
 	</head>
 	<body>
 
-	
+
+  
 
 <h1>Welcome...</h1>
 <h2>Let's start with a&hellip;</h2>
@@ -80,4 +81,3 @@ and a
 
 	</body>
 </html>
-
