--- a/_dist/_styleguide/index.html
+++ b/_dist/_styleguide/index.html
@@ -10,12 +10,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <style>
+        body {
+            font: normal 1em/1.4 sans-serif;
+            color: #444;
+        }
         iframe {
             resize: both;
             overflow: auto;
             width: auto;
             height: auto;
             min-width: 320px;
+            background-color: #fff;
+            border: 1px solid #ccc;
+        }
+        p {
+            font-size: 0.9em;
         }
     </style>
   </head>
@@ -25,8 +34,11 @@
 
     <header>
         <h1 class="js-title">Welcome to the&hellip;</h1>
+        <p class="js-intro"></p>
     </header>
-    <nav></nav>
+    <nav>
+        <ul class="js-navigation"></ul>
+    </nav>
     <main class="js-content">
 
 
