Try to set up html snippet display

--- a/_dist/_styleguide/_patterns/atoms/button/index.html
+++ b/_dist/_styleguide/_patterns/atoms/button/index.html
@@ -48,10 +48,13 @@
 		<![endif]-->
 	</head>
 	<body>
+    <div id="snippet">
 
 
   <button class="btn">lorem</button>
 
 
-	</body>
+	 </div>
+  </body>
 </html>
+
