--- a/_dist/_styleguide/_patterns/index.html
+++ b/_dist/_styleguide/_patterns/index.html
@@ -48,6 +48,7 @@
 		<![endif]-->
 	</head>
 	<body>
+    <div id="snippet">
 
 
   
@@ -87,5 +88,7 @@ and a
 <!--<script>(function(e,t,n,r,i,s,o){e["GoogleAnalyticsObject"]=i;e[i]=e[i]||function(){(e[i].q=e[i].q||[]).push(arguments)},e[i].l=1*new Date;s=t.createElement(n),o=t.getElementsByTagName(n)[0];s.async=1;s.src=r;o.parentNode.insertBefore(s,o)})(window,document,"script","//www.google-analytics.com/analytics.js","ga");ga("create","[UA-XXXXXXX-X]","auto");ga("set","anonymizeIp",true);ga('require', 'displayfeatures');ga("send","pageview")</script>-->
 
 
-	</body>
+	 </div>
+  </body>
 </html>
+
